--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "config": {
-    "document": "https://1drv.ms/w/s!AqyUEZ42BkbTiGXV05-q9AT3Gw8U?e=4dp8yS",
+    "document": "https://1drv.ms/w/s!AqyUEZ42BkbTiGXV05-q9AT3Gw8U?e=GmaM0n",
     "app_to_debug": "word",
     "app_type_to_debug": "desktop",
     "dev_server_port": 3000
