--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -106,6 +106,16 @@
       "port": 9222,
       "webRoot": "${workspaceFolder}",
       "preLaunchTask": "Debug: Web"
-    }
+    },
+    {
+      "type": "office-addin",
+      "request": "attach",
+      "name": "Attach to Office Add-ins",
+      "port": 9222,
+      "trace": "verbose",
+      "url": "https://localhost:3000/taskpane.html?_host_Info=Word$Win32$16.01$en-US$$$$0",
+      "webRoot": "${workspaceFolder}",
+      "timeout": 45000
+      }
   ]
 }
